--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.40",
+    "@types/node-sass": "^4.11.2",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/redux-form": "^8.3.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "csstype": "^3.1.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
