--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node-sass": "^4.11.2",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
     "@types/redux-form": "^8.3.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
