--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "csstype": "^3.1.0",
+    "mobx": "^6.6.0",
+    "mobx-react-lite": "^3.4.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
