--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "csstype": "^3.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "node-sass": "^7.0.1",
+    "prettier": "^2.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
@@ -37,7 +43,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier src/ --write",
+    "lint": "eslint src/ --fix"
   },
   "eslintConfig": {
     "extends": [
