--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
-    "@types/redux-form": "^8.3.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "csstype": "^3.1.0",
@@ -23,6 +22,8 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "grommet": "^2.24.0",
+    "grommet-icons": "^4.7.0",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "node-sass": "^7.0.1",
@@ -34,9 +35,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
@@ -46,12 +47,24 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier src/ --write",
-    "lint": "eslint src/ --fix"
+    "lint": "eslint src/ --fix",
+    "sb": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -67,6 +80,19 @@
     ]
   },
   "devDependencies": {
-    "react-test-renderer": "^18.1.0"
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/node-logger": "^6.5.9",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "prop-types": "^15.8.1",
+    "react-test-renderer": "^18.1.0",
+    "webpack": "^5.73.0"
   }
 }
